--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,18 @@
     android:background="@drawable/kyc_background_3x"
     tools:context="com.valensas.kyc_android.MainActivity">
 
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPagerIntro"
+        android:layout_width="match_parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/welcomeVerticalGuidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeHorizontalGuidelineTop"
+        app:layout_constraintBottom_toTopOf="@+id/welcomeHorizontalGuidelineBottom"
+        app:layout_constraintEnd_toStartOf="@+id/welcomeVerticalGuidelineRight"
+        android:layout_height="match_parent" />
+
+
     <ImageView
         android:id="@+id/welcomeOneImageView"
         android:layout_width="0dp"
@@ -18,6 +30,16 @@
         app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
         app:layout_constraintTop_toBottomOf="@+id/horizontalGuidelineTop"
         app:srcCompat="@drawable/kyc_logo_2x" />
+
+
+    <LinearLayout
+        android:id="@+id/dotsLayout"
+        android:orientation="horizontal"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/viewPagerIntro"
+        />
+
 
     <TextView
         android:id="@+id/titleFirstTextView"
@@ -77,4 +99,33 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.8" />
+
+
+    <android.support.constraint.Guideline
+        android:id="@+id/welcomeHorizontalGuidelineTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.30" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/welcomeHorizontalGuidelineBottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.70" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/welcomeVerticalGuidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.2" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/welcomeVerticalGuidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.7" />
 </android.support.constraint.ConstraintLayout>
