--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,13 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPagerIntro"
         android:layout_width="match_parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/welcomeVerticalGuidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeHorizontalGuidelineTop"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/welcomeHorizontalGuidelineBottom"
         app:layout_constraintEnd_toStartOf="@+id/welcomeVerticalGuidelineRight"
-        android:layout_height="match_parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/welcomeVerticalGuidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeHorizontalGuidelineTop" />
 
 
     <ImageView
@@ -34,11 +35,10 @@
 
     <LinearLayout
         android:id="@+id/dotsLayout"
-        android:orientation="horizontal"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/viewPagerIntro"
-        />
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/viewPagerIntro" />
 
 
     <TextView
