--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,41 +4,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/kyc_background_3x"
+    android:background="@drawable/kyc_background"
     tools:context="com.valensas.kyc_android.MainActivity">
 
+
+    <Button
+        android:id="@+id/welcome_next_button"
+        android:layout_width="88dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        android:text="@string/welcome_next_button_text"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/welcome_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:text=""
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPagerIntro"
         android:layout_width="match_parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/welcomeVerticalGuidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeHorizontalGuidelineTop"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="@+id/welcomeHorizontalGuidelineBottom"
         app:layout_constraintEnd_toStartOf="@+id/welcomeVerticalGuidelineRight"
-        android:layout_height="match_parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/welcomeVerticalGuidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeHorizontalGuidelineTop" >
+
+        <TextView
+            android:id="@+id/titleSecondTextView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/sf_ui_display_ultralight"
+            android:includeFontPadding="false"
+            android:text="-OnBoarding"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toEndOf="@+id/titleFirstTextView"
+            app:layout_constraintTop_toTopOf="@+id/titleFirstTextView" />
+    </android.support.v4.view.ViewPager>
 
 
     <ImageView
         android:id="@+id/welcomeOneImageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/titleFirstTextView"
         app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
         app:layout_constraintTop_toBottomOf="@+id/horizontalGuidelineTop"
-        app:srcCompat="@drawable/kyc_logo_2x" />
+        app:srcCompat="@drawable/kyc_logo" />
 
 
     <LinearLayout
         android:id="@+id/dotsLayout"
-        android:orientation="horizontal"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/viewPagerIntro"
-        />
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/dotsHorizontalGuidelineBottom"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="@id/dotsVerticalGuidelineLeft"
+        app:layout_constraintRight_toRightOf="@id/dotsVerticalGuidelineRight"
+        app:layout_constraintTop_toBottomOf="@+id/dotsHorizontalGuidelineTop" />
 
 
     <TextView
@@ -71,6 +114,9 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/titleFirstTextView"
         app:layout_constraintTop_toTopOf="@+id/titleFirstTextView" />
+
+
+
 
     <android.support.constraint.Guideline
         android:id="@+id/horizontalGuidelineTop"
@@ -113,7 +159,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.70" />
+        app:layout_constraintGuide_percent="0.60" />
 
     <android.support.constraint.Guideline
         android:id="@+id/welcomeVerticalGuidelineLeft"
@@ -128,4 +174,43 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.7" />
+
+
+    <android.support.constraint.Guideline
+        android:id="@+id/bottomTitleVerticalGuidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.70" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/dotsHorizontalGuidelineTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.70" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/dotsHorizontalGuidelineBottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.90" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/dotsVerticalGuidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.45" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/dotsVerticalGuidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.70" />
+
+
+
 </android.support.constraint.ConstraintLayout>
