--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,40 @@
     tools:context="com.valensas.kyc_android.MainActivity">
 
 
+    <TextView
+        android:id="@+id/subtitleFirstTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/sf_ui_display_light"
+        android:includeFontPadding="false"
+        android:text="M"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/subtitleSecondTextView"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@+id/viewPagerIntro" />
+
+    <TextView
+        android:id="@+id/subtitleSecondTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/sf_ui_display_ultralight"
+        android:includeFontPadding="false"
+        android:text="-OnBoarding"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/viewPagerIntro"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@+id/subtitleFirstTextView" />
+
     <Button
         android:id="@+id/welcome_next_button"
         android:layout_width="88dp"
@@ -17,6 +51,7 @@
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="18sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,25 +71,13 @@
         android:id="@+id/viewPagerIntro"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/welcomeHorizontalGuidelineBottom"
         app:layout_constraintEnd_toStartOf="@+id/welcomeVerticalGuidelineRight"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/welcomeVerticalGuidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeHorizontalGuidelineTop" >
+        app:layout_constraintTop_toBottomOf="@+id/welcomeHorizontalGuidelineTop">
 
-        <TextView
-            android:id="@+id/titleSecondTextView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/sf_ui_display_ultralight"
-            android:includeFontPadding="false"
-            android:text="-OnBoarding"
-            android:textColor="@android:color/white"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toEndOf="@+id/titleFirstTextView"
-            app:layout_constraintTop_toTopOf="@+id/titleFirstTextView" />
     </android.support.v4.view.ViewPager>
 
 
@@ -62,7 +85,7 @@
         android:id="@+id/welcomeOneImageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/titleFirstTextView"
         app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
         app:layout_constraintHorizontal_bias="0.5"
@@ -77,6 +100,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/dotsHorizontalGuidelineBottom"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="@id/dotsVerticalGuidelineLeft"
@@ -114,8 +138,6 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/titleFirstTextView"
         app:layout_constraintTop_toTopOf="@+id/titleFirstTextView" />
-
-
 
 
     <android.support.constraint.Guideline
@@ -210,7 +232,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.70" />
-
 
 
 </android.support.constraint.ConstraintLayout>
