--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,8 @@
 
     <Button
         android:id="@+id/welcome_next_button"
-        android:layout_width="88dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:text="@string/welcome_next_button_text"
         android:textAllCaps="false"
