--- a/app/src/main/res/layout/activity_identity_camera.xml
+++ b/app/src/main/res/layout/activity_identity_camera.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.valensas.kyc_android.identityviacamera.IdentityCameraActivity">
+    tools:context="com.valensas.kyc_android.identitycamera.view.IdentityCameraActivity">
 
     <FrameLayout
         android:layout_width="0dp"
