--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/kyc_background"
-    tools:context="com.valensas.kyc_android.MainActivity">
+    tools:context="com.valensas.kyc_android.welcome.MainActivity">
 
 
     <TextView
