--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,13 +70,13 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPagerIntro"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/welcomeHorizontalGuidelineBottom"
         app:layout_constraintEnd_toStartOf="@+id/welcomeVerticalGuidelineRight"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/welcomeVerticalGuidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeHorizontalGuidelineTop">
+        app:layout_constraintTop_toBottomOf="@+id/welcome_back_button">
 
     </android.support.v4.view.ViewPager>
 
