--- a/app/src/main/res/layout/activity_identity_result.xml
+++ b/app/src/main/res/layout/activity_identity_result.xml
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/sf_ui_display_ultralight"
-                android:text=""
+                android:text="%95"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/identityResultSelfieMatchingText"
@@ -322,7 +322,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/sf_ui_display_ultralight"
-                android:text=""
+                android:text="%89"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/identityResultSignitureMatchingText"
